# ratatui-explorer

./: Cargo.toml  LICENCE.txt  README.md  todo.md
examples/: basic.rs  file_preview.rs  filter_by_size.rs  light_and_dark_theme.rs
src/: file_explorer.rs  lib.rs  widget.rs
src/file_explorer/: builder.rs  file.rs
src/input/: crossterm.rs  mod.rs  termion.rs  termwiz.rs
