[package]
name = "ratatui-explorer"
version = "0.2.1"
edition = "2021"
authors = ["Tatounee"]
description = "ratatui-explorer is a small, but highly customizable, file explorer widget for ratatui."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tatounee/ratatui-explorer"
repository = "https://github.com/tatounee/ratatui-explorer.git"
keywords = ["tui", "ratatui", "terminal", "file", "explorer"]
categories = ["command-line-interface", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
educe = { version = "0.6.0", features = [
    "Debug",
    "PartialEq",
    "Eq",
    "Hash",
], default-features = false }


[features]
default = ["crossterm"]
crossterm = ["ratatui/crossterm"]
termion = ["ratatui/termion"]
termwiz = ["ratatui/termwiz"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
